# ai-image-captioning

./: Makefile  README.md  img_conv.py  img_desc.py  img_exif.py  img_exif2.py  main.py  pyproject.toml  repurposerr.py  sample.txt  test.py
img_tools/: img_conv.py  img_desc.py  img_exif.py
yt_spider/: common.py  scrape_videos.py  search_videos.py
