[project]
name = "ollama-image-captioning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "langchain>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "ollama>=0.6.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
]
